mobile overflow fix

--- a/styles/base/_default.scss
+++ b/styles/base/_default.scss
@@ -14,7 +14,9 @@ body {
     font-family: 'InterVariable';
     font-size: 16px;
     width: 100vw;
+    position: relative;
     overflow-x: hidden;
+
 }
 
 
